--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bolder;
     font-size: 100px;
+    top: 20px;
 }
 
 h2 {
