--- a/style.css
+++ b/style.css
@@ -118,3 +118,60 @@ span {
 
 
 }
+
+/*------------------------------------------------*/
+/*Splash page*/
+header{
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 1005;
+    height:80px;
+}
+
+header h4 {
+    position: absolute;
+    left: 10%;
+    bottom:lrem;
+    font-size: 1.6rem;
+}
+
+
+.intro {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(to right,#00416A,#E4E5E6);
+    transition: 2s;
+}
+
+.logo-header {
+    position: absolute;
+    top :40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+
+}
+
+.logo {
+    position: relative;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+}
+
+.logo.active {
+    bottom:0;
+    opacity: 1;
+    transition: ease-in-out 0.5s;
+}
+
+.logo.fade {
+    bottom: 150px;
+    opacity: 0;
+    transition: ease-in-out 0.5s;
+}
