--- a/style.css
+++ b/style.css
@@ -80,38 +80,45 @@ span {
 
 }
 
-.Info {
-    color: black;
-    margin-top: -15px;
-    margin-bottom: -15px;
-    margin-left: 5px;
-    font-size: 18px;
-    font-family: "Neue Montreal";
-    
-}
-
-.Contact {
-    color: black;
-    margin-top: 0px;
-    margin-left: 5px;
-    font-size: 18px;
-    font-family: "Neue Montreal";
-    
-}
-
 .snow {
     margin-top: 50px;
+    margin-bottom: 5px;
     margin-left: 15px;
 }
 
-.Projects {
+.astext {
+    background: none;
+    border: none;
+}
+
+.Projects{
     color: black;
-    margin-top: 0px;
-    margin-left: 5px;
     font-size: 18px;
     font-family: "Neue Montreal";
+    font-weight: lighter;
+    position: fixed;
+    margin-left: 10px;
+    margin-top: 1px;
+}
 
+.Info{
+    color: black;
+    font-size: 18px;
+    font-family: "Neue Montreal";
+    font-weight: lighter;
+    position:fixed;
+    margin-left: -2px;
+    margin-top: 29px;
+}
 
+.Contact{
+    color: black;
+    font-size: 18px;
+    font-family: "Neue Montreal";
+    font-weight: lighter;
+    position: fixed;
+    margin-left: -15px;
+    margin-top: 57px;
 }
 
 /*-------------------------------------------------Splash page--------------------------------------------*/
