--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a:hover {
     bottom: 0;
     margin-left: 15px;
     margin-top: 5px;
-}*/
+}*
 
 /*-------------------------------------------------Splash page--------------------------------------------*/
 * {
