changed the color

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ a:hover {
 }
 
 .Contact{
-    color: black;
+    color: red;
     font-size: 18px;
     font-family: "Neue Montreal";
     font-weight: lighter;
