--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ a:hover {
 }
 
 .Contact{
-    color: red;
+    color: black;
     font-size: 18px;
     font-family: "Neue Montreal";
     font-weight: lighter;
