--- a/blogs/blogs.css
+++ b/blogs/blogs.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: #ffffff;
   color: #333;
   line-height: 1.6;
@@ -42,7 +42,7 @@ article {
 h2 {
   margin-top: 2rem;
   font-size: 1.5rem;
-  color: #4a148c;
+  color: #666;
   line-height: 1.4;
 }
 
