--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -37,7 +37,7 @@ body {
   .content a {
     font-size: 18px;
     text-decoration: none;
-    color: darkblue;
+    color: #007acc;
     font-weight: 300;
   }
   
